<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="hello_world">Welcome!</string>
    <string name="login_progress_signing_in">Logging in&#8230;</string>
    <string name="signup_progress_signing_up">Signing up&#8230;</string>
    <string name="title_activity_main_fragment">Welcome!</string>
    <string name="error_field_required">Field is required</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
	<string name="facebook_login">Log In with Facebook</string>
	<string name="facebook_signup">Sign Up with Facebook</string>
    
</resources>
